--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chai": "^5.1.0",
     "commander": "^12.0.0",
     "connect-mongo": "^5.1.0",
+    "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
